--- a/index.html
+++ b/index.html
@@ -7,12 +7,23 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="resource/css/styles.css">
 
     <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+      </head>
+      <body>
+        <div class="column column1" id="Courses">
+          <h2>Courses</h2>
+          <p class="info">At the University of Bauan, we offer a diverse range of high-quality courses designed to empower students with knowledge and skills for a successful future. Our innovative curriculum, experienced faculty, and state-of-the-art facilities provide an enriching learning environment. From cutting-edge technology programs to vibrant arts and humanities courses, our offerings cater to a wide array of interests and career aspirations.</p>
+          <button class="button">View Courses Offered</button>
+        </div>
 
+        <div class="column column2" id="Admission">
+          <h2>Admission</h2>
+          <p class="info">Admission to the University of Bauan is a gateway to endless opportunities. We welcome aspiring students from various backgrounds and cultures, fostering a diverse and inclusive community. Our admission process is designed to identify talented individuals who are passionate about learning and dedicated to making a positive impact on the world. Join us at the University of Bauan, where education meets excellence, and dreams take flight.</p>
+          <button class="button">Enroll</button>
+        </div>
+      </body>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
