--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>university of bauan</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
+    <h1></h1>
+    <header>
+      <!-- Include Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+  <img src="resource/img/harvard.jpg" alt="" class ="house"> 
+<div class="container">
+  <!-- Create a jumbotron -->
+  <div class = "container mt-5">
+    <div class="jumbotron p-5 card1 text-dark">
+        <h1 class="display-4">University of Bauan</h1>
+        <p class="lead">The best school for someone may be one that offers strong academic pograms in their area of interest or specialization.The availability of resources such as libraries, labs, and technology can influence a school's suitability.
+
+        </p>
+        <hr class="my-4">
+        <p>The best school will ultimately be one that helps a student achieve their personal and academic goals, whether that's gaining a particular skill, pursuing a certain career, or personal growth.</p>
+        <a class="btn btn-light btn-lg" href="#" role="button">Learn more</a>
+      </div>
+
+</div>
+
+    </header>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
