--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <hr class="my-4">
         <p>The best school will ultimately be one that helps a student achieve their personal and academic goals, whether that's gaining a particular skill, pursuing a certain career, or personal growth.</p>
         <a class="btn btn-light btn-lg" href="#" role="button">Learn more</a>
+        <div class="background">
+
+        </div>
       </div>
 
 </div>
