--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
     <link rel="stylesheet" href="resource/css/styles.css">
     <title></title>
 </head>
-<body>
+<body  style="background-color: #ADD8E6;">
 <header class="header">
+    <div class="loader-wrapper d-flex justify-content-center align-items-center">
+        <div class="spinner-border text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
               <section class="News" id="News">
                 <div class="jumbotron">
-                    <h1 class="display-4">Baun University News</h1>
-                    <p class="lead">Stay informed about the latest happenings at Baun University.</p>
-                    <hr class="my-4">
+                    <h1 class="display-6 text-center ">Bauan University News</h3>
+                    <p class="lead text-center">Stay informed about the latest happenings at Baun University.</p>
+                    <hr class="my-4 text-center">
                     <p>
-                        Here you can find updates, announcements, and important news regarding Baun University's programs, events, and achievements.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eget felis ac elit semper euismod.
-                        Sed auctor, erat nec efficitur bibendum, massa velit gravida urna, vel vehicula ipsum velit eu nunc.
-                        Fusce eu erat justo. Nulla facilisi. Proin fringilla massa nec nisl rhoncus, a convallis ex lacinia.
-                        Nulla 
+                        The university has been recognized as a leader in fostering innovation and academic excellence in these crucial fields. With state-of-the-art facilities, renowned faculty, and a commitment to cutting-edge research, Baun University continues to empower students to reach new heights in STEM disciplines.
                     </p>
                 </div>
             </section>
             
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9 d-flex align-items-center">
                 <section class="Announcement" id = "Announcement">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
