--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="resource/css/styles.css">
+    <link rel="stylesheet" href="resource/css/style.css">
     <title></title>
 </head>
-<body  style="background-color: #ADD8E6;">
+<body>
 <header class="header">
     <div class="loader-wrapper d-flex justify-content-center align-items-center">
         <div class="spinner-border text-primary" role="status">
@@ -31,6 +31,7 @@
             </div>
             <div class="col-md-9 d-flex align-items-center">
                 <section class="Announcement" id = "Announcement">
+                    <div class="carousel-container">
                     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -69,6 +70,7 @@
                             <span class="sr-only">Next</span>
                         </button>
                     </div>
+                </div>
                 </section>
             </div>
         </div>
