--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="resource/css/style.css">
+    <link rel="stylesheet" href="resource/css/styles.css">
     <title></title>
 </head>
 <body>
 <header class="header">
-    <div class="loader-wrapper d-flex justify-content-center align-items-center">
-        <div class="spinner-border text-primary" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
+    <div class="loader-overlay" id="loader">
+        <div class="loader"></div>
+    </div>
+    <script src="your-script.js"></script>
     </div>
     <div class="container-fluid">
         <div class="row">
