--- a/index.html
+++ b/index.html
@@ -7,69 +7,47 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="resource/css/styles.css">
 
     <title>university of bauan</title>
   </head>
-  <body>
-    
-    <h1></h1>
-    <header>
-      <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-  <img src="resource/img/harvard.jpg" alt="" class ="house"> 
-<div class="container">
-  <!-- Create a jumbotron -->
-  <div class = "container mt-5">
-    <div class="jumbotron p-5 card1 text-dark">
-        <h1 class="display-4">University of Bauan</h1>
-        <p class="lead">The best school for someone may be one that offers strong academic pograms in their area of interest or specialization.The availability of resources such as libraries, labs, and technology can influence a school's suitability.
 
-        </p>
-        <hr class="my-4">
-        <p>The best school will ultimately be one that helps a student achieve their personal and academic goals, whether that's gaining a particular skill, pursuing a certain career, or personal growth.</p>
-        <a class="btn btn-light btn-lg" href="#" role="button">Learn more</a>
-        <div class="background">
-
-        </div>
-      </div>
-
-</div>
-
+      <body>
+          <header class="header">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom">
+            <a class="navbar-brand" href="#"></a>
+            <img src="resource/img/logo.png" alt="Your Logo" width="100" height="100" class="d-inline-block align-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link text-primary" href="#News">News <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary" href="#Announcement">Announcement</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary" href="#Courses">Courses</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-primary" href="#Admission">Admission</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+              <div class="container mt-5">
+                <div class="jumbotron p-5 card1 text-light">
+                  <h1 class="display-4">University of Bauan</h1>
+                  <p class="lead">The best school for someone may be one that offers strong academic pograms in their area of interest or specialization.The availability of resources such as libraries, labs, and technology can influence a school's suitability.</p>
+                  <hr class="my-4 bg-light">
+                  <p>The best school will ultimately be one that helps a student achieve their personal and academic goals, whether that's gaining a particular skill, pursuing a certain career, or personal growth.</p>
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </div>
+              </div>
     </header>
-
- 
-  </head>
-  <body>
-  <header>
-    <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom">
-      <a class="navbar-brand" href="#"></a>
-      <img src="resource/img/logo.png" alt="Your Logo" width="100" height="100" class="d-inline-block align-top">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link text-primary" href="#News">News <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-primary" href="#Announcement">Announcement</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-primary" href="#Courses">Courses</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-primary" href="#Admission">Admission</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
+  
 
     <!-- Optional JavaScript; choose one of the two! -->
 
