announcement merged to main
HAHAHAHA

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
               </div>
     </header>
 <header class="header">
-    <div class="loader-overlay" id="loader">
+    <!-- <div class="loader-overlay" id="loader">
         <div class="loader"></div>
-    </div>
+    </div> -->
     
     </div>
     <div class="container-fluid">
