--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   </head>
 
       <body>
+        <div class="loader-wrapper" id="loader">
+          <div class="loader"></div>
+      </div>
           <header class="header">
+            
           <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom">
             <a class="navbar-brand" href="#"></a>
             <img src="resource/img/logo.png" alt="Your Logo" width="100" height="100" class="d-inline-block align-top">
@@ -61,5 +65,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     -->
+    <script src="js/loader.js"></script>
   </body>
 </html>
